--- a/index.html
+++ b/index.html
@@ -533,6 +533,8 @@
                     <dd>200部</dd>
                     <dt>頒布形式</dt>
                     <dd>電子書籍（PDF, ePub）</dd>
+                    <dt>サークル情報</dt>
+                    <dd><a href="https://webcatalog-free.circle.ms/Circle/11903711" target="_blank">https://webcatalog-free.circle.ms/Circle/11903711</a></dd>
                 </dl>
             </div>
         </div>
