--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <ul class="social-buttons">
                         <li class="social-button">
                             <a href="https://twitter.com/share" class="twitter-share-button"
-                               data-text="エディター拡張入門 C88 3日目 東 P08a">Tweet</a>
+                               data-text="Unityエディター拡張入門 C88 3日目 東 P08a">Tweet</a>
                             <script>!function (d, s, id) {
                                 var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
                                 if (!d.getElementById(id)) {
