--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
         <div class="row">
             <div class="col-md-offset-1 col-md-3">
-                <img src="img/cover.png" class="shadow" width="300px"/>
+                <img src="img/cover.png" class="shadow" width="100%" style="max-width: 300px"/>
             </div>
             <br/>
 
