--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Unityエディター拡張の入門書！コミックマーケットC88 3日目 東 P08a で頒布します。" />
-    <meta name="keywords" content="Unity,Unityエディター拡張,エディタ拡張,Editor拡張,C88" />
+    <meta name="description" content="Unityエディター拡張の入門書！コミックマーケットC88 3日目 東 P08a で頒布します。"/>
+    <meta name="keywords" content="Unity,Unityエディター拡張,エディタ拡張,Editor拡張,C88"/>
 
-    <meta property="og:title" content="Unity エディター拡張入門" />
-    <meta property="og:description" content="Unityエディター拡張の入門書！コミックマーケットC88 3日目 東 P08a で頒布します。" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://anchan828.github.io/editor-manual/" />
-    <meta property="og:image" content="https://anchan828.github.io/editor-manual/img/sns_image.png" />
-    <meta property="og:site_name" content="Unity エディター拡張入門 紹介ページ" />
+    <meta property="og:title" content="Unity エディター拡張入門"/>
+    <meta property="og:description" content="Unityエディター拡張の入門書！コミックマーケットC88 3日目 東 P08a で頒布します。"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="http://anchan828.github.io/editor-manual/"/>
+    <meta property="og:image" content="https://anchan828.github.io/editor-manual/img/sns_image.png"/>
+    <meta property="og:site_name" content="Unity エディター拡張入門 紹介ページ"/>
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -29,7 +29,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/blueimp-gallery.min.css">
     <!-- Custom CSS -->
     <link href="css/agency.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -96,6 +96,9 @@
                 </li>
                 <li>
                     <a class="page-scroll" href="#c88">コミケ情報</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#gallery">ギャラリー</a>
                 </li>
             </ul>
         </div>
@@ -534,13 +537,73 @@
                     <dt>頒布形式</dt>
                     <dd>電子書籍（PDF, ePub）</dd>
                     <dt>サークル情報</dt>
-                    <dd><a href="https://webcatalog-free.circle.ms/Circle/11903711" target="_blank">https://webcatalog-free.circle.ms/Circle/11903711</a></dd>
+                    <dd><a href="https://webcatalog-free.circle.ms/Circle/11903711" target="_blank">https://webcatalog-free.circle.ms/Circle/11903711</a>
+                    </dd>
                 </dl>
             </div>
         </div>
     </div>
 </section>
 
+<section id="gallery">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">ギャラリー</h2>
+
+                <h3 class="section-subheading text-muted"></h3>
+            </div>
+
+            <div id="blueimp-gallery" class="blueimp-gallery">
+                <div class="slides"></div>
+                <h3 class="title"></h3>
+                <a class="prev">‹</a>
+                <a class="next">›</a>
+                <a class="close">×</a>
+                <a class="play-pause"></a>
+                <ol class="indicator"></ol>
+            </div>
+            <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
+                <div class="slides"></div>
+                <h3 class="title"></h3>
+                <a class="prev">‹</a>
+                <a class="next">›</a>
+                <a class="play-pause"></a>
+                <ol class="indicator"></ol>
+            </div>
+
+            <div id="links" class="container text-center">
+                    <a href="img/gallery/ss01.png" data-gallery>
+                        <img src="img/gallery/ss01.png" height="100px">
+                    </a>
+                    <a href="img/gallery/ss02.png" data-gallery>
+                        <img src="img/gallery/ss02.png" height="100px">
+                    </a>
+                    <a href="img/gallery/ss03.png" data-gallery>
+                        <img src="img/gallery/ss03.png" height="100px">
+                    </a>
+                    <a href="img/gallery/ss04.png" data-gallery>
+                        <img src="img/gallery/ss04.png" height="100px">
+                    </a>
+                    <a href="img/gallery/ss05.png" data-gallery>
+                        <img src="img/gallery/ss05.png" height="100px">
+                    </a>
+                    <a href="img/gallery/ss06.png" data-gallery>
+                        <img src="img/gallery/ss06.png" height="100px">
+                    </a>
+                    <a href="img/gallery/ss07.png" data-gallery>
+                        <img src="img/gallery/ss07.png" height="100px">
+                    </a>
+                    <a href="img/gallery/ss08.png" data-gallery>
+                        <img src="img/gallery/ss08.png" height="100px">
+                    </a>
+                    <a href="img/gallery/ss09.png" data-gallery>
+                        <img src="img/gallery/ss09.png" height="100px">
+                    </a>
+            </div>
+        </div>
+    </div>
+</section>
 
 <footer>
     <div class="container">
@@ -580,12 +643,29 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="js/agency.js"></script>
-
+<script src="js/blueimp-gallery.min.js"></script>
+<script src="js/jquery.blueimp-gallery.min.js"></script>
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    blueimp.Gallery(
+            document.getElementById('links').getElementsByTagName('a'),
+            {
+                container: '#blueimp-gallery-carousel',
+                carousel: true
+            }
+    );
+</script>
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-66122760-1', 'auto');
     ga('send', 'pageview');
