--- a/index.html
+++ b/index.html
@@ -525,7 +525,6 @@
                 <img src="img/map.png" width="100%"/>
             </div>
             <br/>
-
             <div class="col-md-7">
                 <dl class="dl-horizontal">
                     <dt>場所</dt>
@@ -540,6 +539,13 @@
                     <dd><a href="https://webcatalog-free.circle.ms/Circle/11903711" target="_blank">https://webcatalog-free.circle.ms/Circle/11903711</a>
                     </dd>
                 </dl>
+            </div>
+            <div class="clearfix"></div>
+            <br/>
+            <h3 class="col-md-offset-1" id="voucher">バウチャーチケット（電子書籍ダウンロード券）</h3>
+
+            <div class="col-md-12 text-center">
+                <img src="img/voucher.png" width="80%"/>
             </div>
         </div>
     </div>
