--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                     <a class="page-scroll" href="#about">本書について</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#buy">購入</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#info">目次</a>
                 </li>
                 <li>
@@ -120,7 +123,8 @@
                 <div class="intro-lead-in">Unityで効率的な開発をするために
                 </div>
                 <div class="intro-heading">エディター拡張入門</div>
-                <a href="#about" class="page-scroll btn btn-xl">本書について</a>
+                <a href="#about" class="page-scroll btn btn-xl" style="margin: 5px">本書について</a>
+                <a href="#buy" class="page-scroll btn btn-xl" style="margin: 5px">購入する</a>
 
                 <div class="row" style="margin-top: 20px">
                     <ul class="social-buttons">
@@ -163,12 +167,6 @@
     </div>
 </header>
 
-
-<div class="container">
-
-</div>
-
-
 <!-- Services Section -->
 <section id="about">
     <div class="container">
@@ -205,7 +203,31 @@
                     </span>
                 <h4 class="service-heading">サンプルコード</h4>
 
-                <p class="text-muted">サンプルコードを多数掲載しています。ライセンスは MIT ライセンスです（予定）。</p>
+                <p class="text-muted">サンプルコードを多数掲載しています。ライセンスは MIT ライセンスです。</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section id="buy">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">購入</h2>
+
+                <h3 class="section-subheading text-muted"></h3>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <a href="https://kyusyukeigo.booth.pm/">
+                    <img src="img/booth.png" width="100%" alt=""/>
+                </a>
+            </div>
+            <div class="col-md-8">
+                <p class="text-muted">電子書籍版PDFを<a href="https://booth.pm">BOOTH</a>で販売しています。</p>
+                <a href="https://kyusyukeigo.booth.pm/items/128404" class="page-scroll btn btn-xl" target="_blank">購入ページへ移動する</a>
             </div>
         </div>
     </div>
@@ -525,6 +547,7 @@
                 <img src="img/map.png" width="100%"/>
             </div>
             <br/>
+
             <div class="col-md-7">
                 <dl class="dl-horizontal">
                     <dt>場所</dt>
@@ -542,6 +565,7 @@
             </div>
             <div class="clearfix"></div>
             <br/>
+
             <h3 class="col-md-offset-1" id="voucher">バウチャーチケット（電子書籍ダウンロード券）</h3>
 
             <div class="col-md-12 text-center">
@@ -611,7 +635,6 @@
             </div>
 
 
-
         </div>
     </div>
 </section>
@@ -658,7 +681,7 @@
 <script src="js/jquery.blueimp-gallery.min.js"></script>
 <script>
 
-    $(function(){
+    $(function () {
         blueimp.Gallery(
                 $('#links').find('a'),
                 {
