--- a/index.html
+++ b/index.html
@@ -228,9 +228,7 @@
             <div class="col-md-8">
                 <p class="text-muted">電子書籍版PDFを<a href="https://booth.pm">BOOTH</a>で販売しています。</p>
                 <a href="https://kyusyukeigo.booth.pm/items/128404" class="page-scroll btn btn-xl" target="_blank">購入ページへ移動する</a>
-            </div>
-            <div class="col-md-12">
-                <p class="text-muted">PDFの内容は、コミケ88 と BOOTH で違いはありません。また、今後の修正も両方に反映されます。</p>
+                <p class="text-muted">内容は、コミケ88 の頒布物と同じものです。また、今後のアップデート（修正・補足など）も両方に反映されます。</p>
             </div>
         </div>
     </div>
