--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                 <li>
                     <a class="page-scroll" href="#gallery">ギャラリー</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="#u_contact">お問い合せ</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -123,10 +126,23 @@
                 <div class="intro-lead-in">Unityで効率的な開発をするために
                 </div>
                 <div class="intro-heading">エディター拡張入門</div>
-                <a href="#about" class="page-scroll btn btn-xl" style="margin: 5px">本書について</a>
-                <a href="#buy" class="page-scroll btn btn-xl" style="margin: 5px">購入する</a>
 
-                <div class="row" style="margin-top: 20px">
+                <div class="col-md-12 center">
+                    <a href="#about" class="page-scroll btn btn-xl col-md-4 center" style="margin: 5px">本書について</a>
+                    <a href="#buy" class="page-scroll btn btn-xl col-md-4 center" style="margin: 5px">購入する</a>
+                </div>
+
+                <div class="clearfix margin_15"></div>
+
+                <div class="col-md-12 center">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">更新履歴</div>
+                        <div class="panel-body" id="change_log_body">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="row" style="clear: both;margin-top: 20px">
                     <ul class="social-buttons">
                         <li class="social-button">
                             <a href="https://twitter.com/share" class="twitter-share-button"
@@ -228,6 +244,7 @@
             <div class="col-md-8">
                 <p class="text-muted">電子書籍版PDFを<a href="https://booth.pm">BOOTH</a>で販売しています。</p>
                 <a href="https://kyusyukeigo.booth.pm/items/128404" class="page-scroll btn btn-xl" target="_blank">購入ページへ移動する</a>
+
                 <p class="text-muted">内容は、コミケ88 の頒布物と同じものです。また、今後のアップデート（修正・補足など）も両方に反映されます。</p>
             </div>
         </div>
@@ -640,6 +657,28 @@
     </div>
 </section>
 
+<section id="u_contact">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">お問い合せ</h2>
+
+                <h3 class="section-subheading text-muted"></h3>
+
+                <div class="u_contact_body">
+                    メールアドレス: 本書に記載
+                </div>
+                <div class="u_contact_body">
+                    Twitter: <a href="https://twitter.com/kyusyukeigo" target="_blank">@kyusyukeigo</a> (DM可)
+                </div>
+                <div class="u_contact_body">
+                    BOOTH: <a href="https://kyusyukeigo.booth.pm/conversations/new" target="_blank">https://kyusyukeigo.booth.pm/conversations/new</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <footer>
     <div class="container">
         <div class="row">
@@ -690,6 +729,10 @@
                     carousel: true
                 }
         );
+
+        $.get("./change_log.html", function (text) {
+            $("#change_log_body").html(text)
+        })
     })
 
 
