--- a/index.html
+++ b/index.html
@@ -244,8 +244,13 @@
             <div class="col-md-8">
                 <p class="text-muted">電子書籍版PDFを<a href="https://booth.pm">BOOTH</a>で販売しています。</p>
                 <a href="https://kyusyukeigo.booth.pm/items/128404" class="page-scroll btn btn-xl" target="_blank">購入ページへ移動する</a>
+                <div class="clearfix"></div>
+                <p class="text-muted col-md-6 center" style="margin-top: 10px">内容は、コミケ88 の頒布物と同じものです。また、今後のアップデート（修正・補足など）も両方に反映されます。</p>
 
-                <p class="text-muted">内容は、コミケ88 の頒布物と同じものです。また、今後のアップデート（修正・補足など）も両方に反映されます。</p>
+            </div>
+            <div class="col-md-12">
+                <h3 class="">お願い</h3>
+                <p class="text-muted">誤字脱字や説明不足など何かありましたら、気軽に<a href="#u_contact">ご連絡</a>ください。早急に対応いたします。</p>
             </div>
         </div>
     </div>
