--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Unityエディター拡張の入門書！コミックマーケットC88 3日目 東 P08a で頒布します。"/>
+    <meta name="description" content="Unityエディター拡張の入門書！"/>
     <meta name="keywords" content="Unity,Unityエディター拡張,エディタ拡張,Editor拡張,C88"/>
 
     <meta property="og:title" content="Unity エディター拡張入門"/>
-    <meta property="og:description" content="Unityエディター拡張の入門書！コミックマーケットC88 3日目 東 P08a で頒布します。"/>
+    <meta property="og:description" content="Unityエディター拡張の入門書！"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://anchan828.github.io/editor-manual/"/>
     <meta property="og:image" content="https://anchan828.github.io/editor-manual/img/sns_image.png"/>
@@ -22,7 +22,7 @@
     <meta name="twitter:site" content="@kyusyukeigo">
     <meta name="twitter:creator" content="@kyusyukeigo">
     <meta name="twitter:title" content="Unity エディター拡張入門">
-    <meta name="twitter:description" content="Unityエディター拡張の入門書！コミックマーケットC88 3日目 東 P08a で頒布します。">
+    <meta name="twitter:description" content="Unityエディター拡張の入門書！">
     <meta name="twitter:image" content="https://anchan828.github.io/editor-manual/img/sns_image.png">
 
     <title>Unity エディター拡張入門</title>
@@ -149,7 +149,7 @@
                     <ul class="social-buttons">
                         <li class="social-button">
                             <a href="https://twitter.com/share" class="twitter-share-button"
-                               data-text="Unityエディター拡張入門 C88 3日目 東 P08a">Tweet</a>
+                               data-text="Unityエディター拡張入門">Tweet</a>
                             <script>!function (d, s, id) {
                                 var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
                                 if (!d.getElementById(id)) {
