--- a/index.html
+++ b/index.html
@@ -273,15 +273,12 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-offset-1 col-md-3">
-                <img src="img/cover.png" class="shadow" width="100%" style="max-width: 300px"/>
-            </div>
-            <br/>
+
 
             <div class="col-md-7">
                 <dl class="dl-horizontal">
                     <dt>ページ数</dt>
-                    <dd>415ページ</dd>
+                    <dd>423ページ</dd>
                     <dt>目次</dt>
                     <dd>
                         <ol class="toc-h1">
@@ -555,7 +552,14 @@
                     </dd>
                 </dl>
             </div>
-
+            <div class="col-md-3">
+                <img src="img/cover.png" class="shadow" width="100%" style="max-width: 300px"/>
+            </div>
+            <div class="margin_15"></div>
+            <div class="col-md-3 pull-left" style="margin-top: 10px">
+                <a class="twitter-timeline" href="https://twitter.com/kyusyukeigo/timelines/633328543720603649" data-widget-id="633330874616971264">エディター拡張入門</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            </div>
 
         </div>
     </div>
