--- a/index.html
+++ b/index.html
@@ -706,14 +706,14 @@
                     <tr class="eratta">
                         <td>第12章<br/>Undoについて</td>
                         <td class="eratta-wrong">プロパティーの変さらに対するUndo</td>
-                        <td class="eratta-correct">プロパティーの変数に対するUndo</td>
+                        <td class="eratta-correct">プロパティーの変更に対するUndo</td>
                         <td class="eratta-diff">プロパティーの変<ins>更</ins><del>さら</del>に対するUndo</td>
                     </tr>
 
                     <tr class="eratta">
                         <td>第12章<br/>Undoについて</td>
                         <td class="eratta-wrong">オブジェクトのプロパティー（値）変さらに対するUndo</td>
-                        <td class="eratta-correct">オブジェクトのプロパティー（値）変数に対するUndo</td>
+                        <td class="eratta-correct">オブジェクトのプロパティー（値）変更に対するUndo</td>
                         <td class="eratta-diff">オブジェクトのプロパティー（値）変<ins>更</ins><del>さら</del>に対するUndo</td>
                     </tr>
                 </table>
