--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 <li>
                     <a class="page-scroll" href="#about">本書について</a>
                 </li>
+
                 <li>
                     <a class="page-scroll" href="#buy">購入</a>
                 </li>
@@ -105,6 +106,10 @@
                 </li>
                 <li>
                     <a class="page-scroll" href="#eratta">正誤表</a>
+                </li>
+
+                <li>
+                    <a class="page-scroll" href="#review">カスタマーレビュー</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#u_contact">お問い合せ</a>
@@ -229,6 +234,7 @@
 </section>
 
 
+
 <section id="buy">
     <div class="container">
         <div class="row">
@@ -275,7 +281,7 @@
         <div class="row">
 
 
-            <div class="col-md-7">
+            <div class="col-md-12">
                 <dl class="dl-horizontal">
                     <dt>ページ数</dt>
                     <dd>423ページ</dd>
@@ -552,15 +558,6 @@
                     </dd>
                 </dl>
             </div>
-            <div class="col-md-3">
-                <img src="img/cover.png" class="shadow" width="100%" style="max-width: 300px"/>
-            </div>
-            <div class="margin_15"></div>
-            <div class="col-md-3 pull-left" style="margin-top: 10px">
-                <a class="twitter-timeline" href="https://twitter.com/kyusyukeigo/timelines/633328543720603649" data-widget-id="633330874616971264">エディター拡張入門</a>
-                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-            </div>
-
         </div>
     </div>
 </section>
@@ -681,7 +678,9 @@
                 <h3 class="section-subheading text-muted">ここに記載されているものは既に修正しています。購入ページより再度ダウンロードしてください。</h3>
             </div>
             <div class="col-lg-8 center">
-                <p>ページ番号は、更新ごとに変化するおそれがあるので明記していません。<br/>また、記載されていない誤字脱字などありましたら<a href="#u_contact" class="page-scroll">お問い合せ</a>から連絡していただけると助かります。</p>
+                <p>ページ番号は、更新ごとに変化するおそれがあるので明記していません。<br/>また、記載されていない誤字脱字などありましたら<a href="#u_contact"
+                                                                                   class="page-scroll">お問い合せ</a>から連絡していただけると助かります。
+                </p>
                 <table class="table">
                     <thead>
                     <tr>
@@ -695,26 +694,42 @@
                         <td>第2章<br/>標準で使えるエディター拡張機能</td>
                         <td class="eratta-wrong">色の変さらにはカラーピッカーを使用します</td>
                         <td class="eratta-correct">色の変更にはカラーピッカーを使用します</td>
-                        <td class="eratta-diff">色の変<ins>更</ins><del>さら</del>にはカラーピッカーを使用します</td>
+                        <td class="eratta-diff">色の変
+                            <ins>更</ins>
+                            <del>さら</del>
+                            にはカラーピッカーを使用します
+                        </td>
                     </tr>
                     <tr class="eratta">
                         <td>第4章<br/>ScriptableObject</td>
                         <td class="eratta-wrong">Gozmosにアイコンを置く</td>
                         <td class="eratta-correct">Gizmosにアイコンを置く</td>
-                        <td class="eratta-diff">G<ins>i</ins><del>o</del>zmos</td>
+                        <td class="eratta-diff">G
+                            <ins>i</ins>
+                            <del>o</del>
+                            zmos
+                        </td>
                     </tr>
                     <tr class="eratta">
                         <td>第12章<br/>Undoについて</td>
                         <td class="eratta-wrong">プロパティーの変さらに対するUndo</td>
                         <td class="eratta-correct">プロパティーの変更に対するUndo</td>
-                        <td class="eratta-diff">プロパティーの変<ins>更</ins><del>さら</del>に対するUndo</td>
+                        <td class="eratta-diff">プロパティーの変
+                            <ins>更</ins>
+                            <del>さら</del>
+                            に対するUndo
+                        </td>
                     </tr>
 
                     <tr class="eratta">
                         <td>第12章<br/>Undoについて</td>
                         <td class="eratta-wrong">オブジェクトのプロパティー（値）変さらに対するUndo</td>
                         <td class="eratta-correct">オブジェクトのプロパティー（値）変更に対するUndo</td>
-                        <td class="eratta-diff">オブジェクトのプロパティー（値）変<ins>更</ins><del>さら</del>に対するUndo</td>
+                        <td class="eratta-diff">オブジェクトのプロパティー（値）変
+                            <ins>更</ins>
+                            <del>さら</del>
+                            に対するUndo
+                        </td>
                     </tr>
                 </table>
             </div>
@@ -722,6 +737,51 @@
     </div>
 </section>
 
+
+<section id="review">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">カスタマーレビュー</h2>
+
+                <h3 class="section-subheading text-muted"></h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-8">
+                <script type="text/javascript">
+                    (function e() {
+                        var e = document.createElement("script");
+                        e.type = "text/javascript", e.async = true, e.src = "//staticw2.yotpo.com/FiSymWaw8MKEqVhOAZbO4cRaPSlEROkoufMf3GDq/widget.js";
+                        var t = document.getElementsByTagName("script")[0];
+                        t.parentNode.insertBefore(e, t)
+                    })();
+                </script>
+                <div class="yotpo yotpo-main-widget"
+                     data-product-id="118890"
+                     data-name="Unityエディター拡張入門"
+                     data-url="https://anchan828.github.io/editor-manual/"
+                     data-image-url="https://anchan828.github.io/editor-manual/img/sns_image.png"
+                     data-description="Unityエディター拡張の入門書！">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <a class="twitter-timeline" href="https://twitter.com/kyusyukeigo/timelines/633328543720603649"
+                   data-widget-id="633330874616971264">エディター拡張入門</a>
+                <script>!function (d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+                    if (!d.getElementById(id)) {
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = p + "://platform.twitter.com/widgets.js";
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }
+                }(document, "script", "twitter-wjs");</script>
+            </div>
+        </div>
+    </div>
+</section>
 <section id="u_contact">
     <div class="container">
         <div class="row">
@@ -743,7 +803,6 @@
         </div>
     </div>
 </section>
-
 <footer>
     <div class="container">
         <div class="row">
