--- a/index.html
+++ b/index.html
@@ -245,12 +245,12 @@
             </div>
         </div>
         <div class="row text-center">
-            <div class="col-md-4">
+            <div class="col-md-offset-1 col-md-4">
                 <a href="https://kyusyukeigo.booth.pm/">
                     <img src="img/booth.png" width="100%" alt=""/>
                 </a>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-7">
                 <p class="text-muted">電子書籍版PDFを<a href="https://booth.pm">BOOTH</a>で販売しています。</p>
                 <a href="https://kyusyukeigo.booth.pm/items/128404" class="page-scroll btn btn-xl" target="_blank">購入ページへ移動する</a>
 
