--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
 
 
-<section id="buy">
+<section id="buy" class="bg-light-gray">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -269,7 +269,7 @@
 </section>
 
 <!-- Portfolio Grid Section -->
-<section id="info" class="bg-light-gray">
+<section id="info">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -563,7 +563,7 @@
 </section>
 
 <!-- About Section -->
-<section id="c88">
+<section id="c88" class="bg-light-gray">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -669,7 +669,7 @@
     </div>
 </section>
 
-<section id="eratta">
+<section id="eratta" class="bg-light-gray">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -782,7 +782,7 @@
         </div>
     </div>
 </section>
-<section id="u_contact">
+<section id="u_contact" class="bg-light-gray">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
