--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="description" content="Unityエディター拡張の入門書！"/>
-    <meta name="keywords" content="Unity,Unityエディター拡張,エディタ拡張,Editor拡張,C88"/>
+    <meta name="keywords" content="Unity,Unityエディター拡張,Unityエディタ拡張,エディタ拡張,Editor拡張,C88"/>
 
     <meta property="og:title" content="Unity エディター拡張入門"/>
     <meta property="og:description" content="Unityエディター拡張の入門書！"/>
