add mail address

--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                 <h3 class="section-subheading text-muted"></h3>
 
                 <div class="u_contact_body">
-                    メールアドレス: 本書に記載
+                    メールアドレス: anchan828+c88@gmail.com
                 </div>
                 <div class="u_contact_body">
                     Twitter: <a href="https://twitter.com/kyusyukeigo" target="_blank">@kyusyukeigo</a> (DM可)
