--- a/change_log.html
+++ b/change_log.html
@@ -1,3 +1,4 @@
+2015/08/22 - 第4章　ScriptableObject に「4.4　ScriptableObject の親子関係」を追加<br/>
 2015/08/17 - いくつかの誤字を修正（反映済み）<br/>
 2015/08/17 - <a href="#u_contact">お問い合せ</a>を追加<br/>
 2015/08/17 - BOOTHにて電子書籍（PDF）を <a class="page-scroll" href="#buy">販売開始</a><br/>
