--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <div class="col-md-12">
                 <dl class="dl-horizontal">
                     <dt>ページ数</dt>
-                    <dd>423ページ</dd>
+                    <dd>432ページ</dd>
                     <dt>目次</dt>
                     <dd>
                         <ol class="toc-h1">
@@ -315,7 +315,8 @@
                                     <li>4.1　ScriptableObject とは</li>
                                     <li>4.2　ScriptableObject は Unity エディターの要</li>
                                     <li>4.3　ScriptableObject を作成する</li>
-                                    <li>4.4　アイコンの変更</li>
+                                    <li>4.4　ScriptableObject の親子関係</li>
+                                    <li>4.5　アイコンの変更</li>
                                 </ol>
                             </li>
                             <li>第5章　SerializedObjectについて
