誤字脱字修正

--- a/index.html
+++ b/index.html
@@ -702,6 +702,16 @@
                         </td>
                     </tr>
                     <tr class="eratta">
+                        <td>第2章<br/> 標準で使えるエディター拡張機能 </td>
+                        <td class="eratta-wrong">それを解決策の1つとして</td>
+                        <td class="eratta-correct">その解決策の1つとして</td>
+                        <td class="eratta-diff">そ
+                            <ins>の</ins>
+                            <del>れを</del>
+                            解決策の1つとして
+                        </td>
+                    </tr>
+                    <tr class="eratta">
                         <td>第4章<br/>ScriptableObject</td>
                         <td class="eratta-wrong">Gozmosにアイコンを置く</td>
                         <td class="eratta-correct">Gizmosにアイコンを置く</td>
@@ -712,21 +722,19 @@
                         </td>
                     </tr>
                     <tr class="eratta">
+                        <td>第9章<br/>CustomEditor</td>
+                        <td class="eratta-wrong">オブジェクトすべてがアセッに書き込まれます</td>
+                        <td class="eratta-correct">オブジェクトすべてがアセットに書き込まれます</td>
+                        <td class="eratta-diff">オブジェクトすべてがアセッ
+                            <ins>ト</ins>
+                            に書き込まれます
+                        </td>
+                    </tr>
+                    <tr class="eratta">
                         <td>第12章<br/>Undoについて</td>
                         <td class="eratta-wrong">プロパティーの変さらに対するUndo</td>
                         <td class="eratta-correct">プロパティーの変更に対するUndo</td>
                         <td class="eratta-diff">プロパティーの変
-                            <ins>更</ins>
-                            <del>さら</del>
-                            に対するUndo
-                        </td>
-                    </tr>
-
-                    <tr class="eratta">
-                        <td>第12章<br/>Undoについて</td>
-                        <td class="eratta-wrong">オブジェクトのプロパティー（値）変さらに対するUndo</td>
-                        <td class="eratta-correct">オブジェクトのプロパティー（値）変更に対するUndo</td>
-                        <td class="eratta-diff">オブジェクトのプロパティー（値）変
                             <ins>更</ins>
                             <del>さら</del>
                             に対するUndo
