ラベル追加

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <meta name="twitter:title" content="Unity エディター拡張入門">
     <meta name="twitter:description" content="Unityエディター拡張の入門書！">
     <meta name="twitter:image" content="https://anchan828.github.io/editor-manual/img/sns_image.png">
+    <meta name="twitter:data1" content="安藤圭吾">
+    <meta name="twitter:label1" content="AUTHOR">
+    <meta name="twitter:data2" content="1000JPY">
+    <meta name="twitter:label2" content="PRICE">
 
     <title>Unity エディター拡張入門</title>
 
