--- a/change_log.html
+++ b/change_log.html
@@ -1,3 +1,4 @@
+2015/09/02 - 請求書による購入に対応しました<br/>
 2015/08/24 - いくつかの誤字脱字を修正（反映済み）<br/>
 2015/08/22 - 第4章　ScriptableObject に「4.4　ScriptableObject の親子関係」を追加<br/>
 2015/08/17 - いくつかの誤字を修正（反映済み）<br/>
