--- a/index.html
+++ b/index.html
@@ -103,15 +103,11 @@
                     <a class="page-scroll" href="#info">目次</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#c88">コミケ情報</a>
-                </li>
-                <li>
                     <a class="page-scroll" href="#gallery">ギャラリー</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#eratta">正誤表</a>
                 </li>
-
                 <li>
                     <a class="page-scroll" href="#review">カスタマーレビュー</a>
                 </li>
@@ -267,6 +263,12 @@
                 <h3 class="">お願い</h3>
 
                 <p class="text-muted">誤字脱字や説明不足など何かありましたら、気軽に<a href="#u_contact">ご連絡</a>ください。早急に対応いたします。</p>
+            </div>
+
+            <div class="col-md-12">
+                <h3 class="">請求書による購入</h3>
+
+                <p class="text-muted">法人様からの購入に対応するため、請求書ベースでの購入に対応しております。気軽に<a href="#u_contact">ご連絡</a>ください。</p>
             </div>
         </div>
     </div>
@@ -562,49 +564,6 @@
                         </ol>
                     </dd>
                 </dl>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- About Section -->
-<section id="c88" class="bg-light-gray">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">コミケ情報</h2>
-
-                <h3 class="section-subheading text-muted"></h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-offset-1 col-md-4">
-                <img src="img/map.png" width="100%"/>
-            </div>
-            <br/>
-
-            <div class="col-md-7">
-                <dl class="dl-horizontal">
-                    <dt>場所</dt>
-                    <dd>3日目 東 P08a</dd>
-                    <dt>価格</dt>
-                    <dd>1,000円（コミケ88頒布価格）</dd>
-                    <dt>部数</dt>
-                    <dd>200部</dd>
-                    <dt>頒布形式</dt>
-                    <dd>電子書籍（PDF, ePub）</dd>
-                    <dt>サークル情報</dt>
-                    <dd><a href="https://webcatalog-free.circle.ms/Circle/11903711" target="_blank">https://webcatalog-free.circle.ms/Circle/11903711</a>
-                    </dd>
-                </dl>
-            </div>
-            <div class="clearfix"></div>
-            <br/>
-
-            <h3 class="col-md-offset-1" id="voucher">バウチャーチケット（電子書籍ダウンロード券）</h3>
-
-            <div class="col-md-12 text-center">
-                <img src="img/voucher.png" width="80%"/>
             </div>
         </div>
     </div>
