--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <div class="col-md-12">
                 <h3 class="">請求書による購入</h3>
 
-                <p class="text-muted">法人様からの購入に対応するため、請求書ベースでの購入に対応しております。気軽に<a href="#u_contact">ご連絡</a>ください。</p>
+                <p class="text-muted">法人様のために、請求書ベースでの購入に対応しております。気軽に<a href="#u_contact">ご連絡</a>ください。</p>
             </div>
         </div>
     </div>
