--- a/index.html
+++ b/index.html
@@ -694,6 +694,17 @@
                         </td>
                     </tr>
                     <tr class="eratta">
+                        <td>第9章<br/>CustomEditor</td>
+                        <td class="eratta-wrong">Undo について木にする必要はありません</td>
+                        <td class="eratta-correct">Undo について気にする必要はありません</td>
+                        <td class="eratta-diff">Undo について
+                            <ins>気</ins>
+                            <del>木</del>
+                            にする必要はありません
+                        </td>
+                    </tr>
+
+                    <tr class="eratta">
                         <td>第12章<br/>Undoについて</td>
                         <td class="eratta-wrong">プロパティーの変さらに対するUndo</td>
                         <td class="eratta-correct">プロパティーの変更に対するUndo</td>
