--- a/change_log.html
+++ b/change_log.html
@@ -1,5 +1,6 @@
+2015/09/15 - 「DLLをデコンパイル」の章を追加<br/>
 2015/09/10 - いくつかの誤字脱字を修正（反映済み）<br/>
-2015/09/06 - AssetDatabaseの章を追加。その他、文章修正<br/>
+2015/09/06 - 「AssetDatabase」の章を追加。その他、文章修正<br/>
 2015/09/02 - 請求書による購入に対応しました<br/>
 2015/08/24 - いくつかの誤字脱字を修正（反映済み）<br/>
 2015/08/22 - 第4章　ScriptableObject に「4.4　ScriptableObject の親子関係」を追加<br/>
