--- a/index.html
+++ b/index.html
@@ -551,6 +551,22 @@
                                     <li>25.7　動くか確認</li>
                                 </ol>
                             </li>
+                            <li>第26章　AssetDatabase
+                                <ol class="toc-h2">
+                                    <li>26.1 オブジェクトをアセットとして保存</li>
+                                    <li>26.2 アセットが更新されるタイミング</li>
+                                    <li>26.3 System.IO を使う</li>
+                                </ol>
+                            </li>
+                            <li>DLL をデコンパイル
+                                <ol class="toc-h2">
+                                    <li>本章で使用するソフト</li>
+                                    <li>DotPeek で DLL を見る</li>
+                                    <li>DLL を .cs ファイルとしてエクスポート</li>
+                                    <li>デコンパイルを利用したエディター拡張</li>
+                                    <li>エディター拡張でデコンパイル・リフレクションを使うこと</li>
+                                </ol>
+                            </li>
                             <li>過去の資料集
                                 <ol class="toc-h2">
                                     <li>公式カンファレンスイベント「Unite」</li>
