--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 </a>
             </div>
             <div class="col-md-7">
-                <p class="text-muted">電子書籍版PDFを<a href="https://booth.pm">BOOTH</a>で販売しています。</p>
+                <p class="text-muted">電子書籍版の PDF と ePub を<a href="https://booth.pm">BOOTH</a>で販売しています。</p>
                 <a href="https://kyusyukeigo.booth.pm/items/128404" class="page-scroll btn btn-xl" target="_blank">購入ページへ移動する</a>
 
                 <div class="clearfix"></div>
