--- a/change_log.html
+++ b/change_log.html
@@ -1,4 +1,4 @@
-2015/09/16 - BOOTH で ePub 形式をダウンロードできるように対応（PDF と ePub が zip として圧縮されています）
+2015/09/16 - BOOTH で ePub 形式をダウンロードできるように対応（PDF と ePub が zip として圧縮されています）<br/>
 2015/09/15 - 「DLLをデコンパイル」の章を追加<br/>
 2015/09/10 - いくつかの誤字脱字を修正（反映済み）<br/>
 2015/09/06 - 「AssetDatabase」の章を追加。その他、文章修正<br/>
