--- a/index.html
+++ b/index.html
@@ -691,6 +691,15 @@
                         </td>
                     </tr>
                     <tr class="eratta">
+                        <td>第2章<br/> 標準で使えるエディター拡張機能 </td>
+                        <td class="eratta-wrong">シーアセットをダブルクリックして</td>
+                        <td class="eratta-correct">シーンアセットをダブルクリックして</td>
+                        <td class="eratta-diff">シー
+                            <ins>ン</ins>
+                            アセットをダブルクリックして
+                        </td>
+                    </tr>
+                    <tr class="eratta">
                         <td>第4章<br/>ScriptableObject</td>
                         <td class="eratta-wrong">Gozmosにアイコンを置く</td>
                         <td class="eratta-correct">Gizmosにアイコンを置く</td>
