--- a/change_log.html
+++ b/change_log.html
@@ -1,3 +1,5 @@
+2015/09/23 - 「HideFlags」と「AssetPostprocessor」の章を追加<br/>
+2015/09/21 -  読みやすいように細かな文章の修正<br/> 
 2015/09/16 - BOOTH で ePub 形式をダウンロードできるように対応（PDF と ePub が zip として圧縮されています）<br/>
 2015/09/15 - 「DLLをデコンパイル」の章を追加<br/>
 2015/09/10 - いくつかの誤字脱字を修正（反映済み）<br/>
