--- a/index.html
+++ b/index.html
@@ -558,6 +558,21 @@
                                     <li>26.3 System.IO を使う</li>
                                 </ol>
                             </li>
+                            <li>第27章　HideFlags
+                                <ol class="toc-h2">
+                                    <li>27.1 ゲームオブジェクトを非表示にする</li>
+                                    <li>27.2 HideFlags.HideInHierarchy の挙動</li>
+                                    <li>27.3 HideFlags.DontSave の挙動</li>
+                                </ol>
+                            </li>
+                            <li>第28章　AssetPostprocessor
+                                <ol class="toc-h2">
+                                    <li>28.1 Preprocess と Postprocess</li>
+                                    <li>28.2 AssetImporter</li>
+                                    <li>28.3 Version</li>
+                                    <li>28.4 テクスチャの命名規則からスプライトを作成する</li>
+                                </ol>
+                            </li>
                             <li>DLL をデコンパイル
                                 <ol class="toc-h2">
                                     <li>本章で使用するソフト</li>
