--- a/change_log.html
+++ b/change_log.html
@@ -1,3 +1,6 @@
+2015/12/27 - Unity 5.3 に対応。誤字脱字を修正。<br/>
+2015/12/27 - ベージサイズを A5 から B5 サイズへと変更。これによりページ数が減りましたが内容は変わりません。<br/>
+2015/12/27 - 本ページの最後にコメント欄を追加<br/>
 2015/09/23 - 「HideFlags」と「AssetPostprocessor」の章を追加<br/>
 2015/09/21 -  読みやすいように細かな文章の修正<br/> 
 2015/09/16 - BOOTH で ePub 形式をダウンロードできるように対応（PDF と ePub が zip として圧縮されています）<br/>
