--- a/index.html
+++ b/index.html
@@ -715,6 +715,15 @@
                         </td>
                     </tr>
                     <tr class="eratta">
+                        <td>第2章<br/> 標準で使えるエディター拡張機能 </td>
+                        <td class="eratta-wrong">コンポーネント郡</td>
+                        <td class="eratta-correct">コンポーネント群</td>
+                        <td class="eratta-diff">コンポーネント
+                            <ins>群</ins>
+                            <del>郡</del>
+                        </td>
+                    </tr>
+                    <tr class="eratta">
                         <td>第4章<br/>ScriptableObject</td>
                         <td class="eratta-wrong">Gozmosにアイコンを置く</td>
                         <td class="eratta-correct">Gizmosにアイコンを置く</td>
@@ -826,6 +835,32 @@
         </div>
     </div>
 </section>
+
+<section style="padding-top: 20px">
+    <div id="disqus_thread" class="col-md-offset-2 col-md-8"></div>
+    <script>
+        /**
+         * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+         * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+         */
+        /*
+         var disqus_config = function () {
+         this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
+         this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+         };
+         */
+        (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+
+            s.src = '//editor-manual.disqus.com/embed.js';
+
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+</section>
+
 <footer>
     <div class="container">
         <div class="row">
