--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Unityエディター拡張の入門書！"/>
+    <meta name="description" content="Unity5.3に対応。Unityエディター拡張の入門書！"/>
     <meta name="keywords" content="Unity,Unityエディター拡張,Unityエディタ拡張,エディタ拡張,Editor拡張,C88"/>
 
     <meta property="og:title" content="Unity エディター拡張入門"/>
@@ -22,7 +22,7 @@
     <meta name="twitter:site" content="@kyusyukeigo">
     <meta name="twitter:creator" content="@kyusyukeigo">
     <meta name="twitter:title" content="Unity エディター拡張入門">
-    <meta name="twitter:description" content="Unityエディター拡張の入門書！">
+    <meta name="twitter:description" content="Unity5.3に対応。Unityエディター拡張の入門書！">
     <meta name="twitter:image" content="https://anchan828.github.io/editor-manual/img/sns_image.png">
     <meta name="twitter:data1" content="安藤圭吾">
     <meta name="twitter:label1" content="AUTHOR">
