--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="Unity,Unityエディター拡張,Unityエディタ拡張,エディタ拡張,Editor拡張,C88"/>
 
     <meta property="og:title" content="Unity エディター拡張入門"/>
-    <meta property="og:description" content="Unityエディター拡張の入門書！"/>
+    <meta property="og:description" content="Unity5.3に対応。Unityエディター拡張の入門書！"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://anchan828.github.io/editor-manual/"/>
     <meta property="og:image" content="https://anchan828.github.io/editor-manual/img/sns_image.png"/>
