--- a/index.html
+++ b/index.html
@@ -234,7 +234,6 @@
 </section>
 
 
-
 <section id="buy" class="bg-light-gray">
     <div class="container">
         <div class="row">
@@ -245,6 +244,16 @@
             </div>
         </div>
         <div class="row text-center">
+            <div class="col-md-12 text-center" style="padding: 5rem;
+    background-color: #1D242C;
+    margin-bottom: 1rem;
+    color: white;
+    vertical-align: middle;
+    font-size: x-large;
+    font-weight: bold;
+}">
+                2016年4月4日 何かが起こる...
+            </div>
             <div class="col-md-offset-1 col-md-4">
                 <a href="https://kyusyukeigo.booth.pm/">
                     <img src="img/booth.png" width="100%" alt=""/>
@@ -690,7 +699,7 @@
                         </td>
                     </tr>
                     <tr class="eratta">
-                        <td>第2章<br/> 標準で使えるエディター拡張機能 </td>
+                        <td>第2章<br/> 標準で使えるエディター拡張機能</td>
                         <td class="eratta-wrong">それを解決策の1つとして</td>
                         <td class="eratta-correct">その解決策の1つとして</td>
                         <td class="eratta-diff">そ
@@ -700,7 +709,7 @@
                         </td>
                     </tr>
                     <tr class="eratta">
-                        <td>第2章<br/> 標準で使えるエディター拡張機能 </td>
+                        <td>第2章<br/> 標準で使えるエディター拡張機能</td>
                         <td class="eratta-wrong">シーアセットをダブルクリックして</td>
                         <td class="eratta-correct">シーンアセットをダブルクリックして</td>
                         <td class="eratta-diff">シー
@@ -709,7 +718,7 @@
                         </td>
                     </tr>
                     <tr class="eratta">
-                        <td>第2章<br/> 標準で使えるエディター拡張機能 </td>
+                        <td>第2章<br/> 標準で使えるエディター拡張機能</td>
                         <td class="eratta-wrong">コンポーネント郡</td>
                         <td class="eratta-correct">コンポーネント群</td>
                         <td class="eratta-diff">コンポーネント
@@ -843,7 +852,7 @@
          this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
          };
          */
-        (function() { // DON'T EDIT BELOW THIS LINE
+        (function () { // DON'T EDIT BELOW THIS LINE
             var d = document, s = d.createElement('script');
 
             s.src = '//editor-manual.disqus.com/embed.js';
@@ -852,7 +861,8 @@
             (d.head || d.body).appendChild(s);
         })();
     </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments
+        powered by Disqus.</a></noscript>
 </section>
 
 <footer>
@@ -919,8 +929,8 @@
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
         a = s.createElement(o),
                 m = s.getElementsByTagName(o)[0];
         a.async = 1;
