--- a/change_log.html
+++ b/change_log.html
@@ -1,3 +1,4 @@
+2016/04/03 - Unity5.3対応により「シーンアセットにスクリプトをアタッチ」の章を修正（DefaultAssetからSceneAssetへ変更）。<br/>
 2016/03/11 - 請求書対応を終了しました<br/>
 2015/12/27 - Unity 5.3 に対応。誤字脱字を修正。<br/>
 2015/12/27 - ベージサイズを A5 から B5 サイズへと変更。これによりページ数が減りましたが内容は変わりません。<br/>
