--- a/index.html
+++ b/index.html
@@ -766,6 +766,13 @@
                             に対するUndo
                         </td>
                     </tr>
+  <tr class="eratta">
+			<td>第24章<br/>シーンアセットにスクリプトをアタッチ</td>
+			<td colspan="3" style="padding-top: 3rem;">
+				Unity5.2 から Unity5.3 への対応により、DefaultAsset を SceneAsset へと変更
+			</td>
+	</tr>
+
                 </table>
             </div>
         </div>
