--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="intro-lead-in">Unityで効率的な開発をするために
                 </div>
                 <div class="intro-heading">エディター拡張入門</div>
-
+                <!--<div class="" style="margin-bottom: 30px;font-size: large;font-weight: bold;"><a href="#buy" class="page-scroll btn btn-xl col-md-8 center">Web版無償公開中！</a></div>-->
                 <div class="col-md-12 center">
                     <a href="#about" class="page-scroll btn btn-xl col-md-4 center" style="margin: 5px">本書について</a>
                     <a href="#buy" class="page-scroll btn btn-xl col-md-4 center" style="margin: 5px">購入する</a>
@@ -244,15 +244,8 @@
             </div>
         </div>
         <div class="row text-center">
-            <div class="col-md-12 text-center" style="padding: 5rem;
-    background-color: #1D242C;
-    margin-bottom: 1rem;
-    color: white;
-    vertical-align: middle;
-    font-size: x-large;
-    font-weight: bold;
-}">
-                2016年4月4日 何かが起こる...
+            <div class="col-md-12 text-center" style="margin-bottom: 50px">
+                <!--<a href="web/introduction.html" class="page-scroll btn btn-xl col-md-8 center">無償公開のWeb版へ移動する</a>-->
             </div>
             <div class="col-md-offset-1 col-md-4">
                 <a href="https://kyusyukeigo.booth.pm/">
@@ -261,7 +254,7 @@
             </div>
             <div class="col-md-7">
                 <p class="text-muted">電子書籍版の PDF と ePub を<a href="https://booth.pm">BOOTH</a>で販売しています。</p>
-                <a href="https://kyusyukeigo.booth.pm/items/128404" class="page-scroll btn btn-xl" target="_blank">購入ページへ移動する</a>
+                <a href="https://kyusyukeigo.booth.pm/items/128404" class="page-scroll btn btn-xl" target="_blank">PDF/ePub版の入ページへ移動する</a>
 
                 <div class="clearfix"></div>
                 <p class="text-muted col-md-6 center" style="margin-top: 10px">内容は、コミケ88
