--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Unity5.3に対応。Unityエディター拡張の入門書！"/>
+    <meta name="description" content="Web版無償公開中！Unityエディター拡張の入門書！"/>
     <meta name="keywords" content="Unity,Unityエディター拡張,Unityエディタ拡張,エディタ拡張,Editor拡張,C88"/>
 
     <meta property="og:title" content="Unity エディター拡張入門"/>
-    <meta property="og:description" content="Unity5.3に対応。Unityエディター拡張の入門書！"/>
+    <meta property="og:description" content="Web版無償公開中！Unityエディター拡張の入門書！"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://anchan828.github.io/editor-manual/"/>
     <meta property="og:image" content="https://anchan828.github.io/editor-manual/img/sns_image.png"/>
@@ -22,7 +22,7 @@
     <meta name="twitter:site" content="@kyusyukeigo">
     <meta name="twitter:creator" content="@kyusyukeigo">
     <meta name="twitter:title" content="Unity エディター拡張入門">
-    <meta name="twitter:description" content="Unity5.3に対応。Unityエディター拡張の入門書！">
+    <meta name="twitter:description" content="Web版無償公開中！Unityエディター拡張の入門書！">
     <meta name="twitter:image" content="https://anchan828.github.io/editor-manual/img/sns_image.png">
     <meta name="twitter:data1" content="安藤圭吾">
     <meta name="twitter:label1" content="AUTHOR">
@@ -245,7 +245,7 @@
         </div>
         <div class="row text-center">
             <div class="col-md-12 text-center" style="margin-bottom: 50px">
-                <a href="web/introduction.html" class="page-scroll btn btn-xl col-md-8 center">無償公開のWeb版へ移動する</a>
+                <a href="web" class="page-scroll btn btn-xl col-md-8 center">無償公開のWeb版へ移動する</a>
             </div>
             <div class="col-md-offset-1 col-md-4">
                 <a href="https://kyusyukeigo.booth.pm/">
