--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
                 <div class="intro-lead-in">Unityで効率的な開発をするために
                 </div>
                 <div class="intro-heading">エディター拡張入門</div>
-                <div class="" style="margin-bottom: 30px;font-size: large;font-weight: bold;"><a href="#buy" class="page-scroll btn btn-xl col-md-8 center">Web版無償公開中！</a></div>
+                <div class="" style="margin-bottom: 30px;font-size: large;font-weight: bold;"><a href="#buy"
+                                                                                                 class="page-scroll btn btn-xl col-md-8 center">Web版無償公開中！</a>
+                </div>
                 <div class="col-md-12 center">
                     <a href="#about" class="page-scroll btn btn-xl col-md-4 center" style="margin: 5px">本書について</a>
                     <a href="#buy" class="page-scroll btn btn-xl col-md-4 center" style="margin: 5px">購入する</a>
@@ -759,13 +761,17 @@
                             に対するUndo
                         </td>
                     </tr>
-  <tr class="eratta">
-			<td>第24章<br/>シーンアセットにスクリプトをアタッチ</td>
-			<td colspan="3" style="padding-top: 3rem;">
-				Unity5.2 から Unity5.3 への対応により、DefaultAsset を SceneAsset へと変更
-			</td>
-	</tr>
-
+                    <tr class="eratta">
+                        <td>第24章<br/>シーンアセットにスクリプトをアタッチ</td>
+                        <td colspan="3" style="padding-top: 3rem;">
+                            Unity5.2 から Unity5.3 への対応により、DefaultAsset を SceneAsset へと変更
+                        </td>
+                    <tr class="eratta">
+                        <td>第24章<br/>シーンアセットにスクリプトをアタッチ</td>
+                        <td colspan="3" style="padding-top: 3rem;">
+                            Unity5.3 より追加された EditorGUI.InspectorTitlebar の第4引数の記載忘れを修正
+                        </td>
+                    </tr>
                 </table>
             </div>
         </div>
