--- a/change_log.html
+++ b/change_log.html
@@ -1,3 +1,4 @@
+2016/04/22 - Amazonで<a href="http://www.amazon.co.jp/dp/B01EM3T0EM">Kindle版</a>の販売を開始<br/>
 2016/04/03 - Web版を無償公開<br/>
 2016/04/03 - Unity5.3対応により「シーンアセットにスクリプトをアタッチ」の章を修正（DefaultAssetからSceneAssetへ変更）。<br/>
 2016/03/11 - 請求書対応を終了しました<br/>
