--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         lang: 'ja'
     }
 </script>
-
+<script type="text/javascript">window.liveSettings={api_key:"4ec4145c560d4e8a9253f84803008680"}</script>
+<script type="text/javascript" src="//cdn.transifex.com/live.js"></script>
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
